syntax = "proto3";
package pb;

option go_package = "../pb";

message AddRequest {
    repeated int64 args = 1;
}

message AddResponse {
    int64 result = 1;
}

message DivRequest {
    int64 a = 1;
    int64 b = 2;
}

message DivResponse {
    int64 result = 1;
}